# AI_Grader_Agent

./: .gitignore  README.md  app.py  pyproject.toml
grader_backend/: .env  __main__.py  main.py  requirements.txt
grader_backend/utils/: nim_client.py  parse_document.py
grader_launcher/: __main__.py
ls/: pyvenv.cfg
